{
    "name": "CrossyRoadInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "7511ec47-47df-4d05-bffa-e4c702ee9645",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "cd14b8c6-a5a1-49af-8303-519c2187428e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e5815f8a-583d-4623-b5f6-6fa5582208c6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}